    FSDataOutputStream.sync() and Syncable.sync().  (szetszwo)

    HADOOP-8886. Remove KFS support. (eli)
    
    HADOOP-9163 The rpc msg in ProtobufRpcEngine.proto should be moved out to
    avoid an extra copy (Sanjay Radia)

    HADOOP-9151 Include RPC error info in RpcResponseHeader instead of sending
    it separately (sanjay Radia)

  NEW FEATURES
    
    HADOOP-8561. Introduce HADOOP_PROXY_USER for secure impersonation in child
    hadoop client processes. (Yu Gao via llu)

    HADOOP-8469. Make NetworkTopology class pluggable.  (Junping Du via
    szetszwo)

    HADOOP-8470. Add NetworkTopologyWithNodeGroup, a 4-layer implementation
    of NetworkTopology.  (Junping Du via szetszwo)

    HADOOP-8562. Enhancements to support Hadoop on Windows Server and Windows
    Azure environments. (See breakdown of tasks below for subtasks and
    contributors)

  IMPROVEMENTS

    HADOOP-8017. Configure hadoop-main pom to get rid of M2E plugin execution
    not covered (Eric Charles via bobby)

    HADOOP-8015. ChRootFileSystem should extend FilterFileSystem 
    (Daryn Sharp via bobby)

    HADOOP-7595. Upgrade dependency to Avro 1.5.3. (Alejandro Abdelnur via atm)

    HADOOP-7664. Remove warmings when overriding final parameter configuration
    if the override value is same as the final parameter value.
    (Ravi Prakash via suresh)

    HADOOP-7729. Send back valid HTTP response if user hits IPC port with
    HTTP GET. (todd)

    HADOOP-7792. Add verifyToken method to AbstractDelegationTokenSecretManager.
    (jitendra)

    HADOOP-7688. Add servlet handler check in HttpServer.start().
    (Uma Maheswara Rao G via szetszwo)

    HADOOP-7886. Add toString to FileStatus. (SreeHari via jghoman)

    HADOOP-7808. Port HADOOP-7510 - Add configurable option to use original 
    hostname in token instead of IP to allow server IP change. 
    (Daryn Sharp via suresh)

    HADOOP-7987. Support setting the run-as user in unsecure mode. (jitendra)
